hphp/hack/test/typecheck/first_class_polymorphism/lambda_good_co.php.constraint_method_call.exp
ERROR: File "lambda_good_co.php", line 16, characters 15-19:
This generic parameter is redundant because it only appears in a covariant (output) position. Consider replacing uses of generic parameter with `bool` or specifying `<<__Explicit>>` on the generic parameter (Typing[4366])
